@@ -1,3 +1,7 @@
+Sat May 11 14:01:29 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Sat May 11 13:59:53 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
